The version number is hardcoded into sdparm.c (in a C string);
the rpm spec file: sdparm.spec ; the debian/changelog file;
and the configure.ac file (in the AC_INIT item).

ChangeLog for sdparm-1.07 [20110731] [svn: r179]
  - point out some mode page numbers are vendor specific
  - LB provisioning + Block limits VPD pages to sbc3r27
  - Enhanced phy control page: optical mode enabled (spl-r07)
  - Phy control and discover page: sync t0 spl2r02)
  - sync with spc4r31 (handle status good with sense)

ChangeLog for sdparm-1.06 [20101031] [svn: r166]
  - allow upper and lower case in field, (mode and vpd) page,
    vendor, transport or command matching
  - control mode page: add ATMPE and RWWP fields (spc4r27)
  - extended inquiry vpd page: add extended self test
    completion minutes field (spc4r27)
  - power control mode page: PM_BG_PRECEDENCE field (spc4r24)
    - FIDCPC, FSBCPC, FSTCPC fields (spc4r25)
  - sbc3r25 renames 'thin' provisioning' to 'logical block
    provisioning'; changes mode+vpd page and field names
    - add Application tag mode page
    - add SITPUA bit to logical block provisioning mode page
  - fix '-eal' problem with vendor pages
  - point svn:externals to rev 334 of sg3_utils

ChangeLog for sdparm-1.05 [20100413] [svn: r149]
  - add '--readonly' option especially for '-C start' and
    '-C stop' on ATA disks.
  - Control mode page updates (spc4r23)
  - add Control data protection mode page (ssc4r01)
  - block device characteristics VPD page: decode form factor
  - extended inquiry VPD page: activate_microcode+r_sup (spc4r23)
  - Automation device serial number and Data transfer device
    element address VPD pages (ssc4r01)
  - add SBC Referrals VPD page (sbc3r22)
  - expand SBC Thin provisioning VPD page (sbc3r22)
  - expand SBC Block limits VPD page (sbc3r22)
  - SAS-2.1 specification split, upper layers placed in SPL
    - add enable_slumber and enable_partial fields to
      Enhanced phy control mode page