@@ -2,7 +2,7 @@ sdparm (1.07-0.1) unstable; urgency=low
 
   * see ChangeLog
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Wed, 11 May 2011 16:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 24 Sep 2011 14:00:00 +0200
 
 sdparm (1.06-1) unstable; urgency=low
 
