@@ -2,12 +2,13 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.07 [20110731] [svn: r179]
+ChangeLog for sdparm-1.07 [20110924] [svn: r180]
   - point out some mode page numbers are vendor specific
   - LB provisioning + Block limits VPD pages to sbc3r27
   - Enhanced phy control page: optical mode enabled (spl-r07)
   - Phy control and discover page: sync t0 spl2r02)
-  - sync with spc4r31 (handle status good with sense)
+  - sync with spc4r31+32 (handle status good with sense)
+  - extented inquiry VPD: add POA_SUP, HRA_SUP and VSA_SUP
 
 ChangeLog for sdparm-1.06 [20101031] [svn: r166]
   - allow upper and lower case in field, (mode and vpd) page,
